--- a/PracticalTest01Var06/app/src/main/res/layout/activity_practical_test01_var06_main.xml
+++ b/PracticalTest01Var06/app/src/main/res/layout/activity_practical_test01_var06_main.xml
@@ -21,7 +21,8 @@
         android:id="@+id/details_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/more_details"/>
+        android:text="@string/more_details"
+        android:layout_gravity="right"/>
 
     <LinearLayout
         android:id="@+id/web_linear_layout"
@@ -39,7 +40,8 @@
             android:id="@+id/validate_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fail"/>
+            android:text="@string/fail"
+            android:background="@color/red"/>
     </LinearLayout>
 
     <Button
